--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.18.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "jquery": "^3.5.1",
+    "node": "^15.0.1",
+    "vue": "^2.6.12",
     "vue-router": "^3.2.0",
+    "vue-router-layout": "^0.1.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -24,6 +30,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-auto-routing": "^0.5.0",
+    "vue-cli-plugin-auto-routing": "~0.4.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
